<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/item_department_members"
            android:title="@string/see_employees"
            android:icon="@drawable/ic_department_members"/>
        <item
            android:id="@+id/item_employees_requests"
            android:title="@string/employees_requests"
            android:icon="@drawable/ic_requests"/>
        <item
            android:id="@+id/item_stats"
            android:title="@string/stats"
            android:icon="@drawable/ic_statistics"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/report_a_problem"
                android:title="@string/report_a_problem"
                android:icon="@drawable/ic_problem"/>
        </menu>
    </item>
</menu>