<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/beige"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    >

    <EditText
        android:id="@+id/edtPasswordCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textColor="@color/darkgreen"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtUserName"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/edtUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/darkgreen"
        app:layout_constraintEnd_toEndOf="@+id/edtUserName"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/edtUserName"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/username"
        android:textColor="@color/darkgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textColor="@color/darkgreen"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvUserName"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        android:clickable="true"
        android:textColor="@color/darkgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordCreateAccount" />

    <Button
        android:id="@+id/btnAuthenticare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/authenticate"
        android:textColor="@color/darkgreen"
        android:backgroundTint="@color/lightgreen"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:clickable="true"
        android:textColor="@color/darkgreen"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordCreateAccount"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordCreateAccount" />



</androidx.constraintlayout.widget.ConstraintLayout>